Fix the problems and the alignment
add some pics and some text under the pics i fxed the head menu alignment problem
and the alignment in the second section

--- a/style.css
+++ b/style.css
@@ -8,19 +8,19 @@
     width: 100%;
     height: 90px;
     display: flex;
-    align-items: flex-start;
     justify-content: space-around;
-    flex-wrap: wrap;
 }
-#const1{
-
+#cont1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
-#conts1{
+#conts1,#conts2{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
-    gap: 25px;
 }
 #head{
     width: 100%;
@@ -35,7 +35,7 @@ img{
     width: auto;
     height: 240px;
 }
-p{
+#head p{
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -64,14 +64,21 @@ a{
     border-radius: 0.75rem;
     font-weight: 40px;
 }
-.item{
+.infim{
     height: 150px;
     width: 150px;
     border: 5px solid #3882F6;
     border-radius: 1rem;
 }
 #sec1{
-    height: 500px;
+    height: 350px;
     text-align: center;
     color: black;
+}
+#conts2 p {
+    color: black;
+}
+#sec1 h1{
+    margin-top: 60px;
+    margin-bottom: 40px;
 }
